<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5e1e7"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="334dp"
        android:layout_height="63dp"
        android:text="@string/rewindpassion"
        android:textColor="#D14D72"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTop" />

    <EditText
        android:id="@+id/codeInput"
        android:layout_width="227dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#e38aa3"
        android:hint="@string/enter_code"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColorHint="#bfb0b0"
        app:layout_constraintEnd_toStartOf="@id/joinButton"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />


    <Button
        android:id="@+id/joinButton"
        android:layout_width="106dp"
        android:layout_height="56dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#e38aa3"
        android:text="@string/join"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@id/codeInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/codeInput"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/hostButton"
        android:layout_width="342dp"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#e38aa3"
        android:text="@string/host"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codeInput" />


</androidx.constraintlayout.widget.ConstraintLayout>
